--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -28,8 +30,16 @@
      <ul v-for="document in filmDocuments" >
        <li>{{document.title}}</li>
        <li>{{document.original_title}}</li>
-       <li>{{document.original_language}}</li>
-       <li>{{document.vote_average}}</li>
+       <li>
+         <img v-if="document.original_language == 'en' " src="assets/img/download.png" alt="">
+         <img v-else-if="document.original_language == 'it' " src="assets/img/ita.png" alt="">
+         <img v-else-if="document.original_language == 'ja' " src="assets/img/jp.png" alt="">
+         <img v-else src="assets/img/not.png" alt="">
+       </li>
+       <li>
+         <i v-for="stella in document.stellePiene" class="fas fa-star"></i>
+         <i v-for="stella in (5 - document.stellePiene)" class="far fa-star"></i>
+       </li>
      </ul>
    </div>
   </main>
