--- a/index.html
+++ b/index.html
@@ -56,24 +56,36 @@
    </div>
 
 
-    <div class="tvseries_section">
-     <ul v-for="document in tvSeriesDocuments" >
-       <li>{{document.name}}</li>
-       <li>{{document.original_name}}</li>
-       <li>
-         <img class="flag" v-if="document.original_language == 'en' " src="assets/img/download.png" alt="">
-         <img class="flag" v-else-if="document.original_language == 'it' " src="assets/img/ita.png" alt="">
-         <img class="flag" v-else-if="document.original_language == 'ja' " src="assets/img/jp.png" alt="">
-         <p v-else>lingua: {{document.original_language}} </p>
-       </li>
-       <li>
-         <i v-for="stella in document.stellePiene" class="fas fa-star"></i>
-         <i v-for="stella in (5 - document.stellePiene)" class="far fa-star"></i>
-       </li>
+
+
+   <div id="series" class="tvseries_section">
+     <div class="card_series" v-for="document in tvSeriesDocuments" >
+       <div class="overlay">
+         <div class="info_box">
+         <p>Titolo: {{document.name}}</p>
+         <p>Titolo originale: {{document.original_name}}</p>
+         <p>Lingua:</p>
+           <img class="flag" v-if="document.original_language == 'en' " src="assets/img/download.png" alt="">
+           <img class="flag" v-else-if="document.original_language == 'it' " src="assets/img/ita.png" alt="">
+           <img class="flag" v-else-if="document.original_language == 'ja' " src="assets/img/jp.png" alt="">
+           <p v-else>lingua: {{document.original_language}} </p>
+           <p> Voto:
+           <i v-for="stella in document.stellePiene" class="fas fa-star"></i>
+           <i v-for="stella in (5 - document.stellePiene)" class="far fa-star"></i>
+           </p>
+           <p>Overview: {{document.overview}}</p>
+
+           </div>
+       </div>
+
+
        <img v-if="document.poster" :src="document.poster" alt="">
-       <img v-else src="assets/img/place.png" alt="">
-     </ul>
+       <img v-else src="assets/img/place.png" id="img_not" alt="">
+     </div>
    </div>
+
+
+    
 
    </div>
   </main>
